--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,14 +3,16 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>Archetype Created Web Application</display-name>
-  	<servlet>
-  	<servlet-name>springmvc</servlet-name>
-  	<servelt-class>org.springframework.web.servlet.DispatcherServlet</servelt-class>
-  	<load-on-startup>1</load-on-startup>
-  	</servlet>
-  	<servlet-mapping>
+<display-name>Archetype Created Web Application</display-name>
+ 
+<servlet>
+<servlet-name>springmvc</servlet-name>
+<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+<load-on-startup>1</load-on-startup>
+</servlet>
+  <servlet-mapping>
   		<servlet-name>springmvc</servlet-name>
   		<url-pattern>*.mvc</url-pattern>
-  	</servlet-mapping>
+  </servlet-mapping>
+
 </web-app>
